add 1.5.0 support again

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
       <module>modules/vPre</module>
       <module>modules/v1_4_5</module>
       <module>modules/v1_4_6</module>
+      <module>modules/v1_5_R1</module>
       <module>modules/v1_5_R2</module>
       <module>modules/Transporter</module>
    </modules>
