--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.frdfsnlght.transporter</groupId>
   <artifactId>Transporter</artifactId>
-  <version>8.14-SNAPSHOT</version>
+  <version>8.15</version>
   <name>Transporter</name>
   <build>
     <sourceDirectory>src</sourceDirectory>
